kubernetes/llm/components/open-webui/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: llm
  labels:
    app.kubernetes.io/name: open-webui
    app.kubernetes.io/instance: open-webui
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app.kubernetes.io/name: open-webui
