kubernetes/llm/components/open-webui/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: open-webui
  namespace: llm
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: open-webui
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-ingress
      ports:
        - protocol: TCP
          port: 8080
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: llm
          podSelector:
            matchLabels:
              app.kubernetes.io/name: oikb
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: llm
          podSelector:
            matchLabels:
              app: litellm
      ports:
        - protocol: TCP
          port: 4000
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: llm
          podSelector:
            matchLabels:
              app: llm-server
      ports:
        - protocol: TCP
          port: 11434
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: llm
          podSelector:
            matchLabels:
              cnpg.io/cluster: open-webui
      ports:
        - protocol: TCP
          port: 5432
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: llm
          podSelector:
            matchLabels:
              app: open-webui-dragonfly
              app.kubernetes.io/name: dragonfly
      ports:
        - protocol: TCP
          port: 6379
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: llm
          podSelector:
            matchLabels:
              app.kubernetes.io/name: searxng
      ports:
        - protocol: TCP
          port: 8080
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: llm
          podSelector:
            matchLabels:
              app.kubernetes.io/component: opentelemetry-collector
      ports:
        - protocol: TCP
          port: 4317
        - protocol: TCP
          port: 4318
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: llm
          podSelector:
            matchLabels:
              app.kubernetes.io/name: oikb
      ports:
        - protocol: TCP
          port: 8080
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: rook-ceph
          podSelector:
            matchLabels:
              app.kubernetes.io/component: cephobjectstores.ceph.rook.io
      ports:
        - protocol: TCP
          port: 8080
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-dns
          podSelector:
            matchLabels:
              dns.operator.openshift.io/daemonset-dns: default
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internet-egress-open-webui
  namespace: llm
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/name: open-webui
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: open-webui
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
        - ipBlock:
            cidr: 10.101.10.5/32 # OKD WildCard
        - ipBlock:
            cidr: 10.101.10.7/32 # OKD APP WildCard
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-openshift-ingress
  namespace: llm
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/name: open-webui
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: open-webui
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: ingress
      ports:
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 80
